argo-cd/clusters/lgsk8sp1/deploy/hello-gitops/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: hello-gitops
  namespace: hello-gitops
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      name: http
      number: 80
      protocol: HTTP
    hosts:
    - 'hello-gitops.diegoluisi.eti.br'
