argo-cd/clusters/lgsk8sp1/deploy/hello-gitops/virtualservice.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: hello-gitops
  namespace: hello-gitops
spec:
  hosts:
  - "hello-gitops.diegoluisi.eti.br"
  gateways:
  - hello-gitops
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 8080
        host: hello-gitops
